--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,5 @@
 version: "3.5"
 services:
-  db:
-    image: mysql:5.7
-    environment:
-      MYSQL_ROOT_PASSWORD: ''
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -18,3 +14,11 @@ services:
       - "3000:3000"
     depends_on:
       - db
+  db:
+    image: mysql:5.7
+    volumes:
+      - mysql-vol:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+volumes:
+  mysql-vol:
